Chnages related to add appointment and popup

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -10,9 +10,12 @@
     <link href="../Content/Assets/css/icon.css" rel="stylesheet">
     <link href="../Content/Assets/css/animate.css" rel="stylesheet">
     <link href="../Content/Assets/css/custom.css" rel="stylesheet">
+    <link href="Content/Assets/css/angularjs-datetime-picker.css" rel="stylesheet" />
+    <!--<link href="../Content/Assets/css/bootstrap-datetimepicker.css" rel="stylesheet" />-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
-  
+    <script src="Content/Assets/js/angularjs-datetime-picker.min.js"></script>
+   
     <script src="Content/Assets/js/jquery.js"></script>
     <script src="Content/Assets/js/bootstrap.min.js"></script>
     <script src="Content/Assets/js/moment.js"></script>
