Changes related to Staff ,Service page and redirection.

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -26,6 +26,8 @@
     <script src="../App/controller/wizard.js"></script>
     <script src="../App/controller/dashboard.js"></script>
     <script src="../App/controller/Customer.js"></script>
+    <script src="../App/controller/Staff.js"></script>
+    <script src="../App/controller/Services.js"></script>
 </head>
 <div ng-app="bookingApp">    
        <div ng-view></div>  
