Sign In Integration

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -31,6 +31,7 @@
     <script src="../App/controller/app.js"></script>
     <script src="../App/service/service.js"></script>
     <script src="../App/controller/SignUp.js"></script>
+    <script src="../App/controller/SignIn.js"></script>
     <script src="../App/controller/wizard.js"></script>
     <script src="../App/controller/dashboard.js"></script>
     <script src="../App/controller/Customer.js"></script>
