Changes related to Stabs section

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -19,10 +19,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <!--<script src="Content/Assets/js/angularjs-datetime-picker.min.js"></script>-->
     <script src="Content/Assets/js/jquery.js"></script>
+    <link href="Content/dx.spa.css" rel="stylesheet" />
+    <link href="Content/dx.common.css" rel="stylesheet" />
+    <link href="Content/dx.light.css" rel="stylesheet" />
+    <script src="Scripts/dx.all.js"></script>
     <!--<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>-->
 
-    <script src="Content/Assets/js/ui-bootstrap-tpls-0.5.0.js"></script>
-    
+    <script src="/Content/Assets/js/ui-bootstrap-tpls-0.5.0.js"></script>
+    <!--<script src="/Content/Assets/js/globalize.min.js"></script>
+    <script src="/Content/Assets/js/dx.chartjs.js"></script>-->
     
     <script src="Content/Assets/js/bootstrap.min.js"></script>
     <script src="Content/Assets/js/moment.js"></script>
