Changes related to Notestab and Stats tab in Customer Section

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -14,7 +14,8 @@
     <!--<link href="Content/Assets/css/angularjs-datetime-picker.css" rel="stylesheet" />-->
 
     <link href="../Content/Assets/css/bootstrap-datetimepicker.css" rel="stylesheet" />
-   
+    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">-->
+    <link href="Content/Assets/css/trix.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <!--<script src="Content/Assets/js/angularjs-datetime-picker.min.js"></script>-->
@@ -23,6 +24,10 @@
     <link href="Content/dx.common.css" rel="stylesheet" />
     <link href="Content/dx.light.css" rel="stylesheet" />
     <script src="Scripts/dx.all.js"></script>
+
+    <script src="Content/Assets/js/trix.js"></script>
+    <script src="Content/Assets/js/angular-trix.js"></script>
+
     <!--<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>-->
 
     <script src="/Content/Assets/js/ui-bootstrap-tpls-0.5.0.js"></script>
