--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -18,6 +18,7 @@
     <link href="Content/Assets/css/trix.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <script src="Scripts/angular-sanitize.min.js"></script>
     <!--<script src="Content/Assets/js/angularjs-datetime-picker.min.js"></script>-->
     <script src="Content/Assets/js/jquery.js"></script>
     <link href="Content/dx.spa.css" rel="stylesheet" />
