--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href="../Content/Assets/css/bootstrap.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <script src="Scripts/angular-sanitize.min.js"></script>
     <!--<script src="Content/Assets/js/angularjs-datetime-picker.min.js"></script>-->
     <script src="Content/Assets/js/jquery.js"></script>
-    <link href="Content/dx.spa.css" rel="stylesheet" />
+    <!--<link href="Content/dx.spa.css" rel="stylesheet" />-->
     <link href="Content/dx.common.css" rel="stylesheet" />
     <link href="Content/dx.light.css" rel="stylesheet" />
     <script src="Scripts/dx.all.js"></script>
@@ -55,6 +55,10 @@
     <script src="../App/controller/Staff.js"></script>
     <script src="../App/controller/Services.js"></script>
     <script src="../App/controller/Calendar.js"></script>
+    <script src="../App/controller/BuisnessReports.js"></script>
+    <script src="../App/controller/ResourceReports.js"></script>
+    <script src="../App/controller/CustomerReports.js"></script>
+    <script src="../App/controller/ServiceReports.js"></script>
 </head>
 <body>
     <div ng-app="bookingApp">
