Changes related to Report Section

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -44,7 +44,8 @@
     <script src="Scripts/angularUiCalendar/gcal.js"></script>
     <script src="Scripts/moment.js"></script>
     <script src="Scripts/angularUiCalendar/calendar.js"></script>
-   
+    <script src="Scripts/ng-csv.js"></script>
+
     <script src="../App/controller/app.js"></script>
     <script src="../App/service/service.js"></script>
     <script src="../App/controller/SignUp.js"></script>
@@ -64,5 +65,7 @@
     <div ng-app="bookingApp">
         <div ng-view></div>
     </div>
+
+
 </body>
 </html>
