Changes related to Calendar section

--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -14,7 +14,7 @@
     
     <!--<link href="Content/Assets/css/angularjs-datetime-picker.css" rel="stylesheet" />-->
     <link href="../Content/fullcalendar.css" rel="stylesheet" />
-
+    <link href="Content/Assets/js/scheduler.min.css" rel="stylesheet" />
     <link href="../Content/Assets/css/bootstrap-datetimepicker.css" rel="stylesheet" />
     <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">-->
     <link href="Content/Assets/css/trix.css" rel="stylesheet" />
@@ -40,12 +40,15 @@
     <script src="Content/Assets/js/bootstrap.min.js"></script>
     <script src="Content/Assets/js/moment.js"></script>
     <!--<script src="Content/Assets/js/bootstrap-datetimepicker.min.js"></script>-->
-    <script src="Scripts/fullcalendar/fullcalendar.min.js"></script>
-    <script src="Scripts/angularUiCalendar/gcal.js"></script>
-    <script src="Scripts/moment.js"></script>
+    <!--<script src="Scripts/fullcalendar.min.js"></script>-->
+    <script src="Scripts/fullcalendar.js"></script>
+
+    <!--<script src="Scripts/angularUiCalendar/gcal.js"></script>-->
+    <script src="Scripts/gcal.js"></script>
+  
     <script src="Scripts/angularUiCalendar/calendar.js"></script>
     <script src="Scripts/ng-csv.js"></script>
-
+    <script src="Content/Assets/js/scheduler.js"></script>
     <script src="../App/controller/app.js"></script>
     <script src="../App/service/service.js"></script>
     <script src="../App/controller/SignUp.js"></script>
