--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -40,8 +40,8 @@
     <script src="Content/Assets/js/bootstrap.min.js"></script>
     <script src="Content/Assets/js/moment.js"></script>
     <!--<script src="Content/Assets/js/bootstrap-datetimepicker.min.js"></script>-->
-    <!--<script src="Scripts/fullcalendar.min.js"></script>-->
-    <script src="Scripts/fullcalendar.js"></script>
+    <script src="Scripts/fullcalendar.min.js"></script>
+    <!--<script src="Scripts/fullcalendar.js"></script>-->
 
     <!--<script src="Scripts/angularUiCalendar/gcal.js"></script>-->
     <script src="Scripts/gcal.js"></script>
