--- a/AngularMvcProject/Index.html
+++ b/AngularMvcProject/Index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,700i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+   
     <link href="../Content/Assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="../Content/Assets/fonts/Font_stylesheet.css" rel="stylesheet">
     <link href="../Content/Assets/css/icon.css" rel="stylesheet">
@@ -15,11 +16,10 @@
     <!--<link href="Content/Assets/css/angularjs-datetime-picker.css" rel="stylesheet" />-->
     <link href="../Content/fullcalendar.css" rel="stylesheet" />
     <link href="Content/Assets/js/scheduler.min.css" rel="stylesheet" />
-    <link href="../Content/Assets/css/bootstrap-datetimepicker.css" rel="stylesheet" />
-    <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/trix/0.9.2/trix.css">-->
-    <link href="Content/Assets/css/trix.css" rel="stylesheet" />
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
+    <link href="../Content/Assets/css/bootstrap-datetimepicker.css" rel="stylesheet" />   
+    <link href="Content/Assets/css/trix.css" rel="stylesheet" />    
+    <script src="Content/Assets/js/angular.min.js"></script>
+    <script src="Content/Assets/js/angular-route.js"></script>
     <script src="Scripts/angular-sanitize.min.js"></script>
     <!--<script src="Content/Assets/js/angularjs-datetime-picker.min.js"></script>-->
     <script src="Content/Assets/js/jquery.js"></script>
@@ -32,8 +32,7 @@
     <script src="Content/Assets/js/trix.js"></script>
     <script src="Content/Assets/js/angular-trix.js"></script>
 
-    <!--<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.5.0.js"></script>-->
-
+   
     <script src="/Content/Assets/js/ui-bootstrap-tpls-0.5.0.js"></script>
     <!--<script src="/Content/Assets/js/globalize.min.js"></script>
     <script src="/Content/Assets/js/dx.chartjs.js"></script>-->
